Inserção do botão de novo registro

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Hábitos</title>
 </head>
 <body>
-    <img src="./img/logo.svg" alt="">
-    
+    <img src="assets/plus.svg" alt="">
+    <img src="./assets/logo.svg" alt="">
+    <button>+ Registrar o meu dia</button>
 </body>
 </html>
